# pygems

./: .gitlab-ci.yml  .gitsubprojects  CMakeLists.txt  CMakeLists.txt.common  Changelog.md  README.md
CMake/: CPackConfig.cmake
PyGEmS/: CMakeLists.txt  CMakeLists.txt.common  Container.cpp  Container.h  Enums.h  PyGEmSManager.cpp  PyGEmSManager.h  PyStrategy.h  PyTStrategy.h  PyUtils.cpp  PyUtils.h  Strategy.cpp  Strategy.h  StrategyFrameworkBPModule.hpp  StrategyParams.cpp  StrategyParams.h  StrategyParamsBase.cpp  StrategyParamsBase.h  TContainer.cpp  TContainer.h  TStrategy.cpp  TStrategy.h  TStrategyFrameworkBPModule.hpp  Utils.hpp
PyGEmS/templates/: PyTStrategy.h  TContainer.h
PyGEmSManager/: CMakeLists.txt  PyGEmSManager.cpp  PyGEmSManager.h  StrategyFrameworkBPModule.h
examples/: CMakeLists.txt  CMakeLists.txt.common  basic.cpp  correctNeuronMorphology.cpp  correctSection.cpp  templated.cpp  tracings.cpp
examples/basics/: CMakeLists.txt  basic.cpp  templated.cpp  tracings.cpp
examples/qttest/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
pygems/: CMakeLists.txt  CorrectionManager.cpp  CorrectionManager.h  CorrectionMethod.h  CorrectionMethodBase.h  TracingNode.h
scripts/: PythonCorrectionMethod_0.py  PythonCorrectionMethod_1.py  PythonCorrectionMethod_2.py  Strategies-Python2.py  Strategies-Python3.py  Test-Python2.py  Test-Python3.py
